# bc_irp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGUROBI.cmake
include/: config_parameters.hpp  init_grb_model.hpp  instance.hpp  irp_lp.hpp
include/callback/: callback_sec.hpp
include/lazy/: lazy_sec_cvrpsep.hpp
input/: .gitignore  example.cfg
input/instances/: .gitignore
src/: config_parameters.cpp  init_grb_model.cpp  instance.cpp  irp_lp.cpp  main.cpp
src/callback/: callback_sec.cpp
src/callback/cuts/: cvrpsep.cpp
